KoolFileIndexer: He reordenado todo el projecto